--- a/css/style.css
+++ b/css/style.css
@@ -446,21 +446,8 @@ p.footer-title {
   width: 66%;
   float: right; }
 
-.content-page {
-  padding-top: 25px;
-  padding-bottom: 50px; }
-  .content-page .breadcrumbs {
-    font-size: 0.72em; }
-  .content-page h1 {
-    font-weight: 300;
-    margin-top: 25px;
-    margin-bottom: 35px; }
-
-.frame {
-  padding: 1.7em;
-  border: 1px solid #e5e5e5;
-  margin-left: 0;
-  margin-right: 0; }
+.frame-faq-links {
+  padding: 1.7em; }
 
 .faq-links p {
   margin-bottom: 0; }
@@ -477,18 +464,21 @@ p.footer-title {
   background-color: #f5f5f5;
   border: 1px solid #e5e5e5;
   border-top: none; }
+  .search-faq:hover {
+    background-color: #e8e8e8; }
   .search-faq p {
     margin-bottom: 0; }
     .search-faq p a {
       color: #06137b;
       font-weight: 700;
       font-size: 0.8em; }
+      .search-faq p a:hover {
+        text-decoration: none; }
   .search-faq img {
     margin-left: 12px; }
 
 .questions-faq {
-  margin-top: 20px;
-  margin-bottom: 20px; }
+  margin-top: 20px; }
 
 .question {
   padding-top: 25px;
@@ -517,7 +507,8 @@ p.footer-title {
     font-size: 0.9em; }
 
 .question:last-child {
-  border: none; }
+  border: none;
+  padding-bottom: 0; }
 
 form.form-search .row:nth-child(2) .col {
   margin-bottom: 0; }
@@ -527,26 +518,57 @@ form.form-search .row:last-child p {
   font-size: 0.8em;
   color: #8e8d8d; }
 
-.pages a {
-  font-size: 0.8em;
-  color: #4f4f4f;
-  text-decoration: none;
-  margin-left: 3px;
-  margin-right: 3px; }
-  .pages a:hover, .pages a:focus {
-    text-decoration: underline;
-    color: #4f4f4f; }
-.pages a:first-child {
-  margin-left: 0;
-  margin-right: 10px; }
-.pages a:last-child {
-  margin-right: 0;
-  margin-left: 10px; }
-.pages a.active {
-  font-weight: bold;
-  color: black; }
-  .pages a.active:hover, .pages a.active:focus {
-    text-decoration: none; }
+.pages {
+  text-align: right; }
+  .pages a {
+    font-size: 0.8em;
+    color: #4f4f4f;
+    text-decoration: none;
+    margin-left: 3px;
+    margin-right: 3px; }
+    .pages a:hover, .pages a:focus {
+      text-decoration: underline;
+      color: #4f4f4f; }
+  .pages a:first-child {
+    margin-left: 0;
+    margin-right: 10px; }
+  .pages a:last-child {
+    margin-right: 0;
+    margin-left: 10px; }
+  .pages a.active {
+    font-weight: bold;
+    color: black; }
+    .pages a.active:hover, .pages a.active:focus {
+      text-decoration: none; }
+
+.search-overview .frame {
+  padding: 1em 0.5em 1em 2.5em; }
+  .search-overview .frame .col {
+    padding-right: 0;
+    padding-left: 0; }
+  .search-overview .frame .col-lg-10 {
+    max-width: 78%; }
+  .search-overview .frame .col:last-child {
+    padding-left: 0;
+    margin-left: 3%; }
+  .search-overview .frame p {
+    font-size: 0.9em;
+    color: #5c5c5c;
+    margin-bottom: 0; }
+    .search-overview .frame p span {
+      font-weight: bold; }
+  .search-overview .frame button {
+    background-color: #f8f8f8;
+    border: 1px solid #e5e5e5;
+    padding: 10px;
+    width: 100%; }
+    .search-overview .frame button p {
+      font-size: 0.72em;
+      color: #06137b;
+      font-weight: 800;
+      margin-bottom: 0; }
+    .search-overview .frame button a {
+      margin-left: 7px; }
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -562,8 +584,8 @@ a, a:hover, a:active, a:focus {
   width: 70%; }
 
 .content-page {
-  padding-top: 25px;
-  padding-bottom: 50px; }
+  margin-top: 25px;
+  margin-bottom: 90px; }
   .content-page .breadcrumbs {
     font-size: 0.72em; }
   .content-page h1 {
@@ -601,9 +623,11 @@ a, a:hover, a:active, a:focus {
       font-weight: 600;
       font-size: 0.9em;
       border: 2px solid #757575; }
+      .content-page form button:hover, .content-page form button:focus {
+        background-color: #606060;
+        border: 2px solid #606060; }
 
 .frame {
-  padding: 1.7em;
   border: 1px solid #e5e5e5;
   margin-left: 0;
   margin-right: 0; }
