--- a/css/style.scss
+++ b/css/style.scss
@@ -122,7 +122,15 @@ a, a:hover, a:active, a:focus {
 }
 
 .was-validated .form-control:valid {
-    border-color: none;
+    background: url("../images/vinkje.svg") no-repeat scroll 19px 14px;
+    background-position: 98% 50%;
+    background-color: #f8f8f8;
+    border: 1px solid #e5e5e5;
+    -webkit-transition: none;
+}
+
+.was-validated textarea.form-control:valid {
+    background-position: 98% 90%;
 }
 
 
