--- a/css/style.scss
+++ b/css/style.scss
@@ -105,7 +105,7 @@ a, a:hover, a:active, a:focus {
       margin-right: 0px;
     }
 
-    button {
+    button.buttons-form {
       background-color: #757575;
       color: white;
       font-weight: 600;
@@ -129,14 +129,23 @@ a, a:hover, a:active, a:focus {
 
 .was-validated .form-control:valid {
     background: url("../images/vinkje.svg") no-repeat scroll 19px 14px;
-    background-position: 98% 50%;
+    background-position: 97% 50%;
     background-color: #f8f8f8;
     border: 1px solid #e5e5e5;
     -webkit-transition: none;
 }
 
 .was-validated textarea.form-control:valid {
-    background-position: 98% 90%;
+    background-position: 99% 90%;
+}
+
+
+
+.was-validated .buttons-photos {
+  button {
+    background: url("../images/vinkje-wit.svg") no-repeat scroll 19px 14px;
+    background-position: 95% 14%;
+  }
 }
 
 
