--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,7 @@
 @import "partials/faq";
 @import "partials/search";
 @import "partials/add-auction";
+@import "partials/register";
 
 $font:'Open Sans', sans-serif;
 $container-width: 70%;
