--- a/css/partials/_register.scss
+++ b/css/partials/_register.scss
@@ -24,5 +24,106 @@
   }
 
 
+  .submit .col-4 {
+    max-width: 31%;
+  }
 
+
+}
+
+
+/* MEDIA QUERIES */
+@media screen and (max-width: 1313px) {
+  .form-register {
+
+    .phone-number {
+      max-width: 48%;
+    }
+
+    .col-3 {
+      max-width: 22.5%;
+    }
+
+  }
+
+}
+
+
+@media screen and (max-width: 1273px) {
+  .form-register {
+
+    .col-3 {
+      max-width: 22%;
+    }
+
+  }
+
+}
+
+
+
+@media screen and (max-width: 1165px) {
+  .form-register {
+
+    .phone-number {
+      max-width: 47.5%;
+    }
+
+    .col-3 {
+      max-width: 21.5%;
+    }
+
+  }
+
+}
+
+
+
+
+
+@media screen and (max-width: 1132px) {
+  .form-register {
+
+    .phone-number {
+      .col-9 {
+        max-width: 73%;
+      }
+
+      .col-3 {
+        max-width: 24.5%
+      }
+    }
+
+  }
+}
+
+
+
+@media screen and (max-width: 1058px) {
+  .form-register {
+
+    .phone-number {
+      .col-9 {
+        max-width: 71%;
+      }
+
+      .col-3 {
+        max-width: 26.5%
+      }
+    }
+
+  }
+}
+
+
+@media screen and (max-width: 1030px) {
+  .form-register {
+
+    .phone-number {
+      .col-9 {
+        max-width: 72%;
+      }
+    }
+
+  }
 }
