Toegevoegd images gevonden in psd voor my auctions pagina

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,7 @@
 @import "partials/search";
 @import "partials/add-auction";
 @import "partials/register";
+@import "partials/my-auctions";
 
 $font:'Open Sans', sans-serif;
 $container-width: 70%;
