--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@
       color: #0c20c5; }
     .nav li.nav-item-top a:active, .nav li.nav-item-top a:focus {
       font-weight: bold; }
+  .nav li.nav-item-top a.active {
+    font-weight: bold; }
 
 .nav li:last-child {
   border: none; }
@@ -133,10 +135,10 @@
   .nav li.nav-item-bottom a {
     color: #4f4f4f;
     padding: 0; }
-    .nav li.nav-item-bottom a:hover {
+    .nav li.nav-item-bottom a:hover, .nav li.nav-item-bottom a:active, .nav li.nav-item-bottom a:focus {
       color: #1a1919; }
-    .nav li.nav-item-bottom a:active, .nav li.nav-item-bottom a:focus {
-      font-weight: bold; }
+  .nav li.nav-item-bottom a.active {
+    color: black; }
 
 .nav li.nav-item-bottom:first-child {
   margin-left: 0; }
@@ -458,8 +460,9 @@ p.footer-title {
 .faq-links p:last-child {
   margin-bottom: 0; }
 
-.search-button {
-  border-top: none; }
+button.button-light.search-button {
+  border-top: none;
+  padding: 0.75em 0.5em 0.75em 1.5em; }
 
 .questions-faq {
   margin-top: 20px; }
@@ -637,8 +640,13 @@ form.form-search .row:last-child p {
 @media screen and (max-width: 1030px) {
   .form-register .phone-number .col-9 {
     max-width: 72%; } }
+/* Both table pages */
 .content-page h1.margin-bottom-0 {
   margin-bottom: 0; }
+
+/* my watchlist */
+.clearfix .button-light:last-child {
+  margin-right: 5px; }
 
 body {
   font-family: "Open Sans", sans-serif;
@@ -647,12 +655,18 @@ body {
   color: #4f4f4f;
   font-size: 16px; }
 
-a, a:hover, a:active, a:focus {
+a {
   color: #01a6a0; }
+  a:focus, a:active {
+    font-weight: bold; }
 
 .container {
   width: 70%; }
 
+/*
+.activated {
+  font-weight: bold;
+}*/
 .content-page {
   margin-top: 25px;
   margin-bottom: 90px; }
@@ -666,6 +680,11 @@ a, a:hover, a:active, a:focus {
   .content-page h4 {
     font-weight: 300;
     margin-bottom: 15px; }
+  .content-page .small-grey {
+    font-size: 0.9em;
+    color: #767676; }
+  .content-page .margin-top-medium {
+    margin-top: 40px; }
   .content-page form {
     margin-bottom: 25px; }
     .content-page form label {
@@ -735,7 +754,7 @@ a, a:hover, a:active, a:focus {
 /* end form */
 button.button-light {
   float: right;
-  padding: 0.75em 0.5em 0.75em 1.5em;
+  padding: 0.75em;
   background-color: #f5f5f5;
   border: 1px solid #e5e5e5; }
   button.button-light:hover {
@@ -791,7 +810,8 @@ table.table {
   /* end thead */
   /* end tbody */ }
   table.table thead {
-    background-color: #f8f8f8; }
+    background-color: #f8f8f8;
+    border: 1px solid #cbcbcb; }
     table.table thead th {
       font-size: 0.8em;
       font-weight: 400;
