--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
 @import "partials/search";
 @import "partials/add-auction";
 @import "partials/register";
-@import "partials/my-auctions";
+@import "partials/table";
 
 $font:'Open Sans', sans-serif;
 $container-width: 70%;
@@ -31,15 +31,28 @@ body {
 
 
 
-a, a:hover, a:active, a:focus {
+a {
   color: $link-color;
+
+  &:focus, &:active {
+    font-weight: bold;
+  }
 }
+
+
 
 
 
 .container {
     width: $container-width;
 }
+
+/*
+.activated {
+  font-weight: bold;
+}*/
+
+
 
 
 
@@ -62,6 +75,15 @@ a, a:hover, a:active, a:focus {
   h4 {
     font-weight: 300;
     margin-bottom: 15px;
+  }
+
+  .small-grey {
+    font-size: $font-medium-large;
+    color: #767676;
+  }
+
+  .margin-top-medium {
+    margin-top: 40px;
   }
 
 
@@ -181,7 +203,7 @@ a, a:hover, a:active, a:focus {
 
   button.button-light {
     float:right;
-    padding: 0.75em 0.5em 0.75em 1.5em;
+    padding: 0.75em;
     background-color: #f5f5f5;
     border: 1px solid #e5e5e5;
 
@@ -274,6 +296,8 @@ table.table {
 
   thead {
     background-color: #f8f8f8;
+    border: 1px solid #cbcbcb;
+
     th {
       font-size: $font-medium-small;
       font-weight: 400;
