Toegevoegd checkboxes naast table my watchlist

--- a/css/style.scss
+++ b/css/style.scss
@@ -328,6 +328,11 @@ table.table {
       padding-right: 3%;
     }
 
+
+    th.check {
+      
+    }
+
     td {
       border: 1px solid #e4e4e4;
       text-align: center;
